--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "date-diff": "^0.1.3",
     "node-cron": "^1.2.1",
     "sonos": "^0.18.0",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "yamaha-nodejs": "https://github.com/jhenkens/yamaha-nodejs.git"
   },
   "author": "johan@henkens.com",
   "license": "ISC"
