--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "commander": "^2.12.2",
     "date-diff": "^0.1.3",
     "node-cron": "^1.2.1",
+    "promise-retry": "^1.1.1",
     "sonos": "^0.18.0",
     "underscore": "^1.8.3",
+    "winston": "^2.4.0",
     "yamaha-nodejs": "https://github.com/jhenkens/yamaha-nodejs.git"
   },
   "author": "johan@henkens.com",
