--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "chalk": "^2.3.0",
     "commander": "^2.12.2",
     "date-diff": "^0.1.3",
+    "deep-extend": "^0.5.0",
     "node-cron": "^1.2.1",
     "promise-retry": "^1.1.1",
     "sonos": "^0.18.0",
